--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-django
-django-material
-django_tables2
-django-bootstrap-breadcrumbs
-random-word
+certifi==2019.6.16
+chardet==3.0.4
+Django==2.2.4
+django-bootstrap-breadcrumbs==0.9.1
+django-material==1.5.8
+django-tables2==2.1.0
+idna==2.8
+nose==1.3.7
+pytz==2019.2
+Random-Word==1.0.4
+requests==2.22.0
+six==1.12.0
+sqlparse==0.3.0
+urllib3==1.25.3
