--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ certifi==2022.12.7
 chardet==5.0.0
 Django==4.0.8
 django4-bootstrap-breadcrumbs==0.10.0
-django-material==1.10.0
-django-tables2==2.4.1
+django-bootstrap5==22.2
 idna==3.3
 nose==1.3.7
 pytz==2022.1
