--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==5.0.0
 Django==4.0.8
 django4-bootstrap-breadcrumbs==0.10.0
 django-bootstrap5==22.2
+django-tables2==2.5.1
 idna==3.3
 nose==1.3.7
 pytz==2022.1
